test/arrays/diten/forallArrayTypeVar.bad
forallArrayTypeVar.chpl:1: error: Query expressions are not currently supported in this context
